--- a/openApiDocs/v1.0/Files.yml
+++ b/openApiDocs/v1.0/Files.yml
@@ -1759,11 +1759,11 @@ paths:
     patch:
       tags:
         - drives.driveItem
-      summary: Move a DriveItem to a new folder
-      description: "To move a DriveItem to a new parent item, your app requests to update the **parentReference** of the DriveItem to move. This is a special case of the Update method.\nYour app can combine moving an item to a new container and updating other properties of the item into a single request. Items cannot be moved between Drives using this request."
+      summary: Update DriveItem properties
+      description: Update the metadata for a driveItem by ID or path. You can also use update to move an item to another parent by updating the item's **parentReference** property.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/driveitem-move?view=graph-rest-1.0
+        url: https://docs.microsoft.com/graph/api/driveitem-update?view=graph-rest-1.0
       operationId: drive_UpdateItem
       parameters:
         - name: drive-id
@@ -27181,11 +27181,11 @@ paths:
     patch:
       tags:
         - groups.drive
-      summary: Move a DriveItem to a new folder
-      description: "To move a DriveItem to a new parent item, your app requests to update the **parentReference** of the DriveItem to move. This is a special case of the Update method.\nYour app can combine moving an item to a new container and updating other properties of the item into a single request. Items cannot be moved between Drives using this request."
+      summary: Update DriveItem properties
+      description: Update the metadata for a driveItem by ID or path. You can also use update to move an item to another parent by updating the item's **parentReference** property.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/driveitem-move?view=graph-rest-1.0
+        url: https://docs.microsoft.com/graph/api/driveitem-update?view=graph-rest-1.0
       operationId: group.drive_UpdateItem
       parameters:
         - name: group-id
@@ -60960,11 +60960,11 @@ paths:
     patch:
       tags:
         - users.drive
-      summary: Move a DriveItem to a new folder
-      description: "To move a DriveItem to a new parent item, your app requests to update the **parentReference** of the DriveItem to move. This is a special case of the Update method.\nYour app can combine moving an item to a new container and updating other properties of the item into a single request. Items cannot be moved between Drives using this request."
+      summary: Update DriveItem properties
+      description: Update the metadata for a driveItem by ID or path. You can also use update to move an item to another parent by updating the item's **parentReference** property.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/driveitem-move?view=graph-rest-1.0
+        url: https://docs.microsoft.com/graph/api/driveitem-update?view=graph-rest-1.0
       operationId: user.drive_UpdateItem
       parameters:
         - name: user-id
@@ -92816,6 +92816,7 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/microsoft.graph.teamsAppResourceSpecificPermission'
+          description: A collection of resource-specific permissions.
       additionalProperties:
         type: object
     microsoft.graph.teamsApp:
@@ -95071,6 +95072,7 @@ components:
           $ref: '#/components/schemas/microsoft.graph.teamsAppResourceSpecificPermissionType'
         permissionValue:
           type: string
+          description: The name of the resource-specific permission.
           nullable: true
       additionalProperties:
         type: object
